echoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0261dc6db13ebeee6, subnet-0e0353c1309170a10
    external-dns.alpha.kubernetes.io/hostname: ahmad.groveops.net
    # external-dns.alpha.kubernetes.io/hostname: my-app.test-dns.com
spec:
  ingressClassName: alb
  rules:
    - host: ahmad.groveops.net
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: echoserver
                port:
                  number: 80
